istio/ingress/kiali-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    kubernetes.io/tls-acme: "true"
  name: kiali
spec:
  rules:
  - host: kiali.develop.in.quid.com
    http:
      paths:
      - backend:
          serviceName: kiali
          servicePort: 20001
        path: /
  tls:
  - hosts:
    - kiali.develop.in.quid.com
    secretName: kiali.develop.in.quid.com-tls
