istio/ingress/my-kiali-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: kiali
spec:
  rules:
  - host: kiali.dev-canary.in.quid.com
    http:
      paths:
      - backend:
          serviceName: kiali
          servicePort: 20001
        path: /
  tls:
  - hosts:
    - kiali.dev-canary.in.quid.com
    secretName: kiali.dev-canary.in.quid.com-tls
