istio/ingress/my-tracing-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: tracing
spec:
  rules:
  - host: tracing.dev-canary.in.quid.com
    http:
      paths:
      - backend:
          serviceName: jaeger-query
          servicePort: 16686
        path: /
  tls:
  - hosts:
    - tracing.dev-canary.in.quid.com
    secretName: tracing.dev-canary.in.quid.com-tls
