istio/ingress/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    kubernetes.io/tls-acme: "true"
  name: prometheus
spec:
  rules:
  - host: istio-prometheus.example.com
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090 
        path: /
  tls:
  - hosts:
    - istio-prometheus.example.com
    secretName: istio-prometheus.example.com-tls
